<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>

    <string name="hello_first_fragment">My Running Routes</string>
    <string name="hello_second_fragment">Detailed Run Analysis</string>
</resources>
